[package]
name = "grain"
version = "0.1.0"
edition = "2021"
description = "Godot Rust Addons Installation Ninja - A CLI tool for managing Rust addons in Godot"
authors = ["Marcos Vinicius Marcon"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/marconvcm/grain"
keywords = ["godot", "rust", "addon", "cli", "game-development"]
categories = ["command-line-utilities", "game-development"]

[[bin]]
name = "grain"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.225"
serde_yaml = "0.9"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1"
zip = "2.1"
indicatif = "0.17"
console = "0.15"
async-trait = "0.1"
scraper = "0.21"
regex = "1.0"
